--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/alarm/
     - assets/images/scale.png
     - assets/images/sky/day.png
     - assets/images/sky/day_sep.png
