1. add rain gif 2. make sunny, clouly, rainy event in notificationscreen. add rain gif in home page and notification screen.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,74 +70,15 @@ flutter:
   assets:
     - assets/images/alarm/
     - assets/images/scale.png
-    - assets/images/sky/day.png
-    - assets/images/sky/day_sep.png
-    - assets/images/sky/sun_rise_fall.png
-    - assets/images/sky/night_sep.png
-    - assets/images/sky/night.png
-    - assets/images/sun/sun_morning.png
-    - assets/images/sun/sun_noon.png
-    - assets/images/sun/sun_afternoon.png
-    - assets/images/moon/moon_3.png
-    - assets/images/moon/moon_5.png
-    - assets/images/moon/moon_7.png
-    - assets/images/moon/moon_8.png
-    - assets/images/moon/moon_9.png
-    - assets/images/moon/moon_10.png
-    - assets/images/moon/moon_11.png
-    - assets/images/moon/moon_15.png
-    - assets/images/moon/moon_16.png
-    - assets/images/moon/moon_17.png
-    - assets/images/moon/moon_18.png
-    - assets/images/moon/moon_19.png
-    - assets/images/moon/moon_20.png
-    - assets/images/moon/moon_21.png
-    - assets/images/moon/moon_23.png
-    - assets/images/moon/moon_24.png
-    - assets/images/moon/moon_25.png
-    - assets/images/moon/moon_26.png
-    - assets/images/clock/clock_1.png
-    - assets/images/clock/clock_2.png
-    - assets/images/clock/clock_3.png
-    - assets/images/clock/clock_4.png
-    - assets/images/clock/clock_5.png
-    - assets/images/clock/clock_6.png
-    - assets/images/clock/clock_7.png
-    - assets/images/clock/clock_8.png
-    - assets/images/clock/clock_9.png
-    - assets/images/clock/clock_10.png
-    - assets/images/clock/clock_11.png
-    - assets/images/clock/clock_12.png
-    - assets/images/soil/day_sep_soil.png
-    - assets/images/soil/sun_rise_fall_soil.png
-    - assets/images/soil/night_sep_soil.png
-    - assets/images/soil/night_soil.png
-    - assets/images/soil/day_soil.png
-    - assets/images/cloud/day_cloud.png
-    - assets/images/cloud/day_cloudy.png
-    - assets/images/cloud/night_cloud.png
-    - assets/images/cloud/night_cloudy.png
-    - assets/images/crop/crop_1.png
-    - assets/images/crop/crop_2.png
-    - assets/images/crop/crop_3.png
-    - assets/images/crop/crop_4.png
-    - assets/images/crop/crop_5.png
-    - assets/images/crop/crop_6.png
-    - assets/images/crop/crop_7.png
-    - assets/images/crop/crop_8.png
-    - assets/images/crop/crop_9.png
-    - assets/images/crop/crop_10.png
-    - assets/images/crop/crop_11.png
-    - assets/images/crop/crop_12.png
-    - assets/images/crop/crop_13.png
-    - assets/images/weatherIcon/precipprob.png
-    - assets/images/weatherIcon/windSpeed.png
-    - assets/images/weatherIcon/temp.png
-    - assets/images/weatherIcon/feelTemp.png
-    - assets/images/weatherIcon/humidity.png
-    - assets/images/toolIcon/outDoorTimeSettingWord.png
-    - assets/images/toolIcon/return.png
-    - assets/images/toolIcon/right.png
+    - assets/images/sky/
+    - assets/images/sun/
+    - assets/images/moon/
+    - assets/images/clock/
+    - assets/images/soil/
+    - assets/images/cloud/
+    - assets/images/crop/
+    - assets/images/weatherIcon/
+    - assets/images/toolIcon/
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
