1.change the background of alarmpage. 2. finish the more information page(wait for content)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/images/scale.png
     - assets/images/sky/
     - assets/images/sun/
+    - assets/images/ill_brick.jpg
     - assets/images/moon/
     - assets/images/clock/
     - assets/images/soil/
