--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   file_picker: ^2.1.7
   rxdart: ^0.25.0
   audioplayers: ^0.17.4
-
+  url_launcher: ^6.0.4
   flutter_local_notifications: ^4.0.1+2
 
   # The following adds the Cupertino Icons font to your application.
